/*
 * Copyright (C) 2015 Red Bull Media House GmbH <http://www.redbullmediahouse.com> - all rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// ------------------------------------------------------------------------
//  Run 'build.proto' from the project's root directory for compilation
// ------------------------------------------------------------------------

option java_package = "com.rbmhtechnology.eventuate.serializer";
option optimize_for = SPEED;

message DurableEventFormat {
  optional PayloadFormat payload = 1;
  optional string emitterId = 2;
  optional string emitterAggregateId = 3;
  repeated string customDestinationAggregateIds = 4;
  optional int64 systemTimestamp = 5;
  optional VectorTimeFormat vectorTimestamp = 6;
  optional string processId = 7;
  optional string sourceLogId = 8;
  optional string targetLogId = 9;
  optional int64 sourceLogSequenceNr = 10;
  optional int64 targetLogSequenceNr = 11;
  optional int64 sourceLogReadPosition = 12;
}

message PayloadFormat {
  optional int32 serializerId = 1;
  optional bytes payload = 2;
  optional bytes payloadManifest = 3;
}

message VectorTimeEntryFormat {
  required string processId = 1;
  required int64 logicalTime = 2;
}

message VectorTimeFormat {
  repeated VectorTimeEntryFormat entries = 1;
}